--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,13 +11,14 @@ services:
       - '8000:8000'
     environment:
       DEBUG: 'true'
-      DATABASE_URL: 'psql://dev:dev@localhost:5432/todoapp'
+      DATABASE_URL: 'psql://dev:dev@postgres:5432/todoapp'
+      REDIS_URL: 'redis://redis:6379/1'
       THP_GOOGLE_OAUTH2_CLIENT_ID: ''
       THP_GOOGLE_OAUTH2_CLIENT_SECRET: ''
       THP_GOOGLE_OAUTH2_PROJECT_ID: ''
       THP_LINKEDIN_CLIENT_ID: ''
       THP_LINKEDIN_CLIENT_SECRET: ''
-
+      CHANNEL_REDIS: (127.0.0.1, 6379)
   postgres:
     image: postgres:16
     ports:
